argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    external-dns.alpha.kubernetes.io/hostname: argocd.localtest.me
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.localtest.me
      secretName: argocd-tls
  rules:
    - host: argocd.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
